Fix footer jumper

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -117,9 +117,12 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;
     line-height: 1.5;
-    padding: 0;
+    min-height: 100vh;
+    padding: 0 0 50px 0;
     margin: 0;
     background-color: #ffffff;
+    position: absolute;
+    width: 100%;
 }
 
 /* Global */
@@ -152,6 +155,7 @@ header {
     color: #fff;
     width: 100%;
     height: 100px; 
+    position: relative;
 } 
 
 header .header-brand {
@@ -559,13 +563,16 @@ select {
 }
 
 footer {
+    height: 50px;
+    position: absolute;
+    width: 100%;
     padding: 10px;
-    margin-top: 10px;
+    /*margin-top: 10px;*/
     color: #ffffff;
     background: #3c3c3c;
     text-align: center;
     font-size: 10px;
     letter-spacing: 1px;
     cursor: pointer;
-    margin-top: 15px;
+    bottom: 0;
 }
